--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,14 +85,14 @@ dependencies:
   flutter_mobx: ^2.2.1+1
 
   # Payment gateway
-  razorpay_flutter: ^1.3.7
+  #razorpay_flutter: ^1.3.7
   flutter_stripe: ^11.0.0
   #flutter_paystack:
   #  git:
   #    url: https://github.com/appmeetmighty/flutter_paystack.git
 #    path: ./lib/package/flutter_paystack-master
 #  flutter_paystack: ^1.0.7
-  flutter_braintree: ^4.0.0
+  #flutter_braintree: ^4.0.0
   #flutterwave_standard: ^1.0.8
   flutter_paytabs_bridge: ^2.6.17
 #  mercado_pago_mobile_checkout: ^0.2.0-dev.3
