--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -19,7 +19,7 @@
 	<key>PROJECT_ID</key>
 	<string>vtc-gestion</string>
 	<key>STORAGE_BUCKET</key>
-	<string>vtc-gestion.appspot.com</string>
+	<string>vtc-gestion.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
